feat(11): add chat one to one

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
 <body>
     <ul class="pages">
         <li class="chat page">
+            <input class="receiverId" placeholder="Receiver" />
             <div class="chatArea">
                 <ul class="messages"></ul>
             </div>
             <input class="inputMessage" placeholder="Type here..." />
+            <button id="sendMsgBtn" class="sendMsgBtn">Send</button>
         </li>
         <li class="login page">
             <div class="form">
