--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 
                 <h3 class="title">What's receiver username?</h3>
                 <input id="receiverId" class="usernameInput" placeholder="Receiver" type="text" maxlength="14" />
+
+                <h3 class="title">What's your role?</h3>
+                <input id="userRole" class="usernameInput" placeholder="Role" type="text" maxlength="14" />
             </div>
         </li>
     </ul>
