--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </ul>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="/v1/sockets/socket.io/socket.io.js"></script>
+    <script src="/v1/conversations/sockets/socket.io.js"></script>
     <script src="/main.js"></script>
 </body>
 
