fix(app): fix for client test

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Socket.IO Chat Example</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/v1/conversations/test/style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="/v1/conversations/sockets/socket.io.js"></script>
-    <script src="/main.js"></script>
+    <script src="/v1/conversations/test/main.js"></script>
 </body>
 
 </html>
